@@ -1,0 +1,18 @@
+
+package Paws::KMS::ImportKeyMaterialResponse;
+  use Moose;
+
+
+### main pod documentation begin ###
+
+=head1 NAME
+
+Paws::KMS::ImportKeyMaterialResponse
+
+=head1 ATTRIBUTES
+
+
+
+=cut
+
+1;
